# prompt_shortner

./: main.py  pyproject.toml
reducer/: __init__.py  anchors.py  cli.py  config.py  dedupe.py  features.py  normalize.py  output_normalize.py  pipeline.py  protect.py  rewrite.py  schemas.py  segment.py  select.py  tokenize.py  verify.py
tests/: test_output_normalize.py  test_pipeline.py  test_protect.py  test_segment.py  test_verify.py
