[project]
name = "prompt-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasketch>=1.9.0",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "pytest>=9.0.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "yake>=0.7.3",
]
